--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: Lynn.io
 
 author:
   name: Lynn Wallenstein
-  email: lynn.wallenstein@gmail.com
+  email: lynn@lynn.io
   github: lynnwallenstein
   twitter: lynnwallenstein
 
