--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,17 @@ dist
 _site
 node_modules
 .tmp
+
+# OS or Editor folders
+.DS_Store
+._*
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+.idea
