--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "lynnio",
   "version": "0.0.2",
   "dependencies": {
-    "normalize-css": "~2.1.3",
-    "jquery": "2.0.3",
+    "normalize-css": "3.0.0",
+    "jquery": "2.1.0",
     "colorbox": "1.4.33"
   }
 }
