--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ show_drafts: true
 
 # Split posts over multiple subdirectories called “page2”, “page3”, … “pageN”
 paginate: 5
-paginate_path: 'page:num'
+paginate_path: "page:num"
 
 # Markdown library
 markdown: redcarpet
