--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,9 @@
   "name": "lynnio",
   "version": "0.0.4",
   "dependencies": {
-    "normalize-css": "3.0.1",
+    "colorbox": "1.5.14",
     "jquery": "2.1.1",
-    "colorbox": "1.5.14"
+    "moment": "2.8.3",
+    "normalize-css": "3.0.1"
   }
 }
