--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "lynnio",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Yeoman / Grunt workflow for lynn.io",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-autoprefixer": "~0.2.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-csslint": "~0.1.2",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.2.0",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-concurrent": "~0.3.0",
-    "grunt-csscss": "~0.5.0",
-    "grunt-jekyll": "git://github.com/dannygarcia/grunt-jekyll.git#aa03074ee0f5b69dc9d7a0e6ced6bb8cd923add6",
-    "grunt-rev": "~0.1.0",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-svgmin": "~0.2.0",
-    "grunt-usemin": "~0.1.12",
-    "load-grunt-tasks": "~0.1.0",
-    "time-grunt": "~0.1.1"
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^2.1.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-coffee": "^0.7.0",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": "^0.7.0",
+    "grunt-contrib-csslint": "^0.1.2",
+    "grunt-contrib-cssmin": "^0.11.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.9.2",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-concurrent": "^1.0.0",
+    "grunt-csscss": "^0.5.0",
+    "grunt-jekyll": "git://github.com/dannygarcia/grunt-jekyll.git#2f4cd891836d45120952fbbb1d73029f57c162fe",
+    "grunt-rev": "^0.1.0",
+    "grunt-contrib-sass": "^0.8.1",
+    "grunt-svgmin": "^2.0.0",
+    "grunt-usemin": "^3.0.0",
+    "load-grunt-tasks": "^2.0.0",
+    "time-grunt": "^1.0.0"
   },
   "engines": {
     "node": ">=0.10.0"
